[package]
name = "cedarling_wasm"
version = "2.2.0"
edition = "2021"
description = "The Cedarling is a performant local authorization service that runs the Rust Cedar Engine"
license = "Apache-2.0"
repository = "git+https://github.com/JanssenProject/jans.git"
publish = false

[package.metadata.publishConfig]
registry = "https://registry.npmjs.org/"
access = "public"
provenance = true
name = "@janssenproject/cedarling_wasm"

[lib]
crate-type = ["cdylib"] # Required for WASM output

[dependencies]
# Common dependency for WASM interop
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
cedarling = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = { workspace = true }
wasm-bindgen-test = "0.3.49"

# NOTE: profile settings (lto/opt-level/strip/codegen-units) for the WASM build
# are NOT set here — Cargo ignores [profile.*] in non-root workspace members.
# They live in ./.cargo/config.toml (a config-based profile Cargo honors only when
# building from this directory, i.e. under wasm-pack).
# wasm-opt runs AFTER LTO; fat-LTO output uses bulk-memory + nontrapping
# float-to-int, so those features must be enabled here or wasm-opt fails validation.
[package.metadata.wasm-pack.profile.release]
wasm-opt = [
    '-Oz',
    '--enable-reference-types',
    '--enable-bulk-memory',
    '--enable-nontrapping-float-to-int',
    '--enable-sign-ext',
    '--enable-mutable-globals',
    '--enable-multivalue',
]

[dev-dependencies]
# is used in testing
test_utils = { workspace = true }
