[package]
name = "authz_python"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "cedarling_python"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22.0", features = ["extension-module"] }
cedarling = { workspace = true }
serde_json = { workspace = true }
serde-pyobject = "0.4.0"
