[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "cedarling_python"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[tool.maturin]
features = ["pyo3/extension-module"]


[tool.poetry]
name = "cedarling_python"
version = "0.1.0"
description = ""
authors = ["Oleh Bozhok <oleh@gluu.org>"]
readme = "README.md"
