[package]
name = "authz_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
# project local deps
init_engine = { workspace = true }
jwt_engine = { workspace = true }
# other
serde_json = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
log = { workspace = true }
cedar-policy = { workspace = true }
url = "2.5"
